# cdflib-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: error.rs  lib.rs  solver_trace_lockstep.rs  traits.rs
src/distribution/: beta.rs  binomial.rs  chi_squared.rs  chi_squared_noncentral.rs  fisher_snedecor.rs  fisher_snedecor_noncentral.rs  gamma.rs  mod.rs  negative_binomial.rs  normal.rs  poisson.rs  students_t.rs
src/search/: dinvr.rs  dzror.rs  mod.rs
src/solver/: dinvr.rs  dzror.rs  mod.rs  monotone.rs  trace.rs
src/special/: beta.rs  erf.rs  gamma.rs  internal.rs  mod.rs  normal.rs  students_t.rs
tests/: beta_and_discrete_round_trips.rs  beta_distributions.rs  beta_kernels.rs  beta_routines.rs  blocker_boundaries.rs  coverage_gaps.rs  discrete_distributions.rs  dispatchers.rs  erf_normal_kernels.rs  erf_normal_routines.rs  gamma_family_round_trips.rs  gamma_kernels.rs  gamma_routines.rs  noncentral_distributions.rs  noncentral_smoke.rs  normal_distribution.rs  psi_dt1_routines.rs  scaffolding.rs  search_failure_bounds.rs
tests/common/: mod.rs
tests/data/: beta_cdf.csv  beta_inc.csv  beta_log.csv  binomial_cdf.csv  cdfbet_a.csv  cdfbet_b.csv  cdfbet_x.csv  cdfbin_pr.csv  cdfbin_s.csv  cdfbin_xn.csv  cdfchi_df.csv  cdfchi_x.csv  cdfchn_df.csv  cdfchn_pnonc.csv  cdfchn_x.csv  cdff_dfd.csv  cdff_dfn.csv  cdff_f.csv  cdffnc_dfd.csv  cdffnc_dfn.csv  cdffnc_f.csv  cdffnc_phonc.csv  cdfgam_scale.csv  cdfgam_shape.csv  cdfgam_x.csv  cdfnbn_pr.csv  cdfnbn_s.csv  cdfnbn_xn.csv  cdfnor_mean.csv  cdfnor_sd.csv  cdfnor_x.csv  cdfpoi_s.csv  cdfpoi_xlam.csv  cdft_df.csv  cdft_t.csv  chi_squared_noncentral_cdf.csv  cumnor.csv  dbetrm.csv  dinvnr.csv  dlanor.csv  (+22 more)
(+24 files in other folders)
