[package]
name = "cdflib"
authors = [ "Sebastiano Vigna <sebastiano.vigna@unimi.it>" ]
version = "0.1.0"
edition = "2024"
description = "Pure-Rust port of CDFLIB: cumulative distribution functions (CDF) associated with common probability distribution"
license = "MIT"
repository = "https://github.com/vigna/CDFLIB-rs"
keywords = ["statistics", "distribution", "cdf", "quantile", "numerics"]
categories = ["mathematics", "science"]
readme = "README.md"
documentation = "https://docs.rs/cdflib"
rust-version = "1.85"

[dependencies]
thiserror = "2"
